# SaleSight

./: .README.md.swp  .gitignore  Makefile  README.md  gemini.md  pyproject.toml  requirements.txt
docs/: mkdocs.yml
docs/docs/: index.md
entorno/: pyvenv.cfg
notebooks/: EDA.ipynb  ETL.ipynb  estructura.ipynb  modelos.ipynb
salesight/: __init__.py  config.py  dashboard.py  dataset.py  features.py  ingest.py  plots.py
salesight/modeling/: predict.py  train.py
salesight/pipeline/: main.py
tests/: test_dataset.py
